Commit the branch feat_GST1.2

--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -9,9 +9,11 @@
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
         <Label Content="Total Charge after adding &#xA; the delivery charge($25):" HorizontalAlignment="Left" Height="43"  Margin="20,200,0,0" VerticalAlignment="Top" Width="154"/>
         <Label Content="Total Charge after adding &#xA; the wrap charge($5):" HorizontalAlignment="Left" Height="43"  Margin="20,240,0,0" VerticalAlignment="Top" Width="154"/>
-        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="188,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74"/>
-        <TextBlock Name="totalWrapChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="188,251,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74"/>
+        <Label Content="Total Charge after GST @10%:" HorizontalAlignment="Left" Height="43"  Margin="20,280,0,0" VerticalAlignment="Top" Width="174"/>
+        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="24" Margin="209,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="210,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74"/>
+        <TextBlock Name="totalWrapChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="210,251,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74"/>
+        <TextBlock Name="totalGSTChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="202,285,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
         <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
